@@ -31,17 +31,17 @@ def checkbox_to_selected_helper(item, value):
         return u"""<input type="checkbox"
                           name="to_list:list"
                           checked="checked"
-                          value="%s"/>""" % item['value']
+                          value="%s"/>""" % item['email']
 
     return u"""<input type="checkbox"
                       name="to_list:list"
-                      value="%s"/>""" % item['value']
+                      value="%s"/>""" % item['email']
 
 
 def checkbox_cc_helper(item, value):
     return u"""<input type="checkbox"
                     name="cc_list:list"
-                    value="%s"/>""" % item['value']
+                    value="%s"/>""" % item['email']
 
 
 def checkbox_to_group_helper(item, value):
@@ -138,7 +138,7 @@ class NotificationForm(BrowserView):
                 title = t.title if ITitledTokenizedTerm.providedBy(t) else t.value
                 user = dict(title=title,
                             value=t.value,
-                            email=member.getProperty("email", ""),
+                            email=member.getProperty("email", t.value),
                             selected=t.value in self.pre_select)
                 finalized.append(user)
 
